@@ -33,3 +33,5 @@ samples/rndcolors.pl
 samples/wininfo.pl
 samples/Win32/kernel32.pm
 META.yml                                 Module meta-data (added by MakeMaker)
+inc/Devel/CheckOS.pm
+inc/Devel/AssertOS.pm
