@@ -1,25 +1,37 @@
-# $Id: Makefile.PL,v 1.0 2001/10/30 13:57:31 dada Exp $
+# $Id$
+
+# If we are on platforms other than Win32 or Cygwin,
+# exit now. This should play nice for CPAN testers
+use lib inc;
+use Devel::AssertOS qw(MicrosoftWindows MSWin32 Cygwin);
 
 use ExtUtils::MakeMaker;
 WriteMakefile(
     'NAME'	=> 'Win32::API',
-    ($] < 5.005 ? () : (
-		'AUTHOR'        	=> 'Aldo Calpini <dada@perl.it>, Cosimo Streppone <cosimo@cpan.org>',
-#       'MAINTAINER'        => 'Cosimo Streppone <cosimo@cpan.org>',
-		'ABSTRACT'      	=> 'Perl Win32 API Import Facility',
-        'LICENSE'           => 'perl',
-    )),   
-        'PM' => {
-                'API.pm'                => '$(INST_LIBDIR)/API.pm',
-                'Type.pm'               => '$(INST_LIBDIR)/API/Type.pm',
-		        'Struct.pm' 		=> '$(INST_LIBDIR)/API/Struct.pm',
-		        'Callback.pm' 		=> '$(INST_LIBDIR)/API/Callback.pm',
-                'Test.pm'               => '$(INST_LIBDIR)/API/Test.pm',
+
+    'AUTHOR'        	=> 'Aldo Calpini <dada@perl.it>, Cosimo Streppone <cosimo@cpan.org>',
+    'ABSTRACT'      	=> 'Perl Win32 API Import Facility',
+
+    'PM' => {
+        'API.pm'      => '$(INST_LIBDIR)/API.pm',
+        'Type.pm'     => '$(INST_LIBDIR)/API/Type.pm',
+        'Struct.pm'   => '$(INST_LIBDIR)/API/Struct.pm',
+        'Callback.pm' => '$(INST_LIBDIR)/API/Callback.pm',
+        'Test.pm'     => '$(INST_LIBDIR)/API/Test.pm',
 	},
 
     'VERSION_FROM' => 'API.pm',
-    'dist'  => {COMPRESS => 'gzip -9f', SUFFIX => 'gz'},
-#   'clean' => {FILES => 'API_test.dll API_test_dll/Release/*'},
+
+    'dist'  => {
+        COMPRESS => 'gzip -9f', 
+        SUFFIX   => 'gz'
+    },
+
+    # Win32 is a prerequisite, at least for our tests
+    'PREREQ_PM' => { 'Win32' => 0 },
+
+    # One day, I'd like to restore the dynamic API_test.dll
+    #'clean' => {FILES => 'API_test.dll API_test_dll/Release/*'},
 );
 
 # We must "chmod +x API_test.dll", or cygwin users see test suite fail
